feat: configurable work hours via env vars and total overtime summary output

--- a/.env.example
+++ b/.env.example
@@ -42,4 +42,16 @@ LOCAL_TZ=America/New_York
 HOLIDAYS_COUNTRY=US
 HOLIDAYS_PROV=NY
 
-# (Work schedule windows are defined inside the script; edit there if needed.)
+# ---- Work Hours (new configurable intervals) ----
+# Default work hours applied to all weekdays unless overridden below (comma-separated intervals HH:MM-HH:MM)
+WORK_HOURS=09:00-18:00
+# Optional per-day overrides (example with split lunch):
+# WORK_HOURS_MON=09:00-12:00,13:00-17:30
+# WORK_HOURS_TUE=
+# WORK_HOURS_WED=
+# WORK_HOURS_THU=
+# WORK_HOURS_FRI=
+# WORK_HOURS_SAT=10:00-14:00
+# WORK_HOURS_SUN=
+# Weekend suppression (true = weekends count entirely as extra, ignore any weekend overrides)
+WEEKENDS_COUNT_AS_EXTRA=true
